feat(swagger): refactor swagger based on reference
