# apps/swagger/src/spec/message.spec.yaml
@@ -5,7 +5,7 @@ info:
   description: API documentation
 
 servers:
-  - url: http://localhost:3000
+  - url: http://localhost:8080
 
 components:
   securitySchemes:
@@ -16,7 +16,7 @@ components:
     AccessToken:
       type: apiKey
       in: header
-      name: X-ACCESS-TOKEN
+      name: Authorization
 
   schemas:
     MessagesResponse:
